--- a/Traffic-Light-Challenge/Traffic-Light-Challenge.csproj
+++ b/Traffic-Light-Challenge/Traffic-Light-Challenge.csproj
@@ -50,6 +50,7 @@
     <Compile Include="GameEngine.cs" />
     <Compile Include="JsonDAOMap.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="Obstacle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Street.cs" />
